add get route to get all classes
